nginx-tls-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls-service
  labels:
    app: nginx-tls
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-tls
  type: ClusterIP
