ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: cert-manager
  annotations:
    cert-manager.io/issuer: test-ca-issuer
    ingressClassName: nginx
spec:
  rules:
  - host: echo.info
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 9000
  tls:
  - hosts:
    - echo.info
    secretName: echo-cert
